# RabbitMQ-Python-producer-consumer

./: README.md  consumer.py  producer.py  pyproject.toml  template.env  utils.py
